--- a/Ui/Ui.Desktop/Resources/Styles/ChatStyle.xaml
+++ b/Ui/Ui.Desktop/Resources/Styles/ChatStyle.xaml
@@ -38,8 +38,8 @@
 
     <Style x:Key="ChatListViewStyle" TargetType="{x:Type ListView}">
         <Setter Property="AlternationCount" Value="2" />
-        <Setter Property="Background" Value="{DynamicResource WhiteBrush}" />
-        <Setter Property="BorderBrush" Value="{DynamicResource BlackBrush}" />
+        <Setter Property="Background" Value="White" />
+        <Setter Property="BorderBrush" Value="Black" />
         <Setter Property="BorderThickness" Value="1" />
         <Setter Property="Opacity" Value="0.9" />
         <Setter Property="Height" Value="420" />
