--- a/Ui/Ui.Desktop/App.xaml
+++ b/Ui/Ui.Desktop/App.xaml
@@ -1,12 +1,12 @@
-<Application 
-    x:Class="PhexensWuerfelraum.Ui.Desktop.App" 
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-    xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+<Application
+    x:Class="PhexensWuerfelraum.Ui.Desktop.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:UiLogic="clr-namespace:PhexensWuerfelraum.Logic.Ui;assembly=PhexensWuerfelraum.Logic.Ui"
     xmlns:Desktop="clr-namespace:PhexensWuerfelraum.Ui.Desktop"
-    StartupUri="MainWindow.xaml" 
+    StartupUri="MainWindow.xaml"
     d1p1:Ignorable="d">
     <Application.Resources>
         <ResourceDictionary>
@@ -15,13 +15,12 @@
                     <UiLogic:MainViewModel x:Key="Locator" d:IsDataSource="True" />
                     <Desktop:MessageListener x:Key="MessageListener" />
                 </ResourceDictionary>
-                <!-- MahApps.Metro resource dictionaries. Make sure that all file names are Case Sensitive! -->
+
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
-                <!-- Accent and AppTheme setting -->
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Sienna.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Light.Sienna.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.Page.xaml" />
+
                 <ResourceDictionary Source="/Resources/IconsNonShared.xaml" />
                 <ResourceDictionary Source="/Resources/Styles/MiscStyle.xaml" />
                 <ResourceDictionary Source="/Resources/Styles/PageStyle.xaml" />
