--- a/Ui/Ui.Desktop/Resources/Styles/MiscStyle.xaml
+++ b/Ui/Ui.Desktop/Resources/Styles/MiscStyle.xaml
@@ -1,5 +1,5 @@
 ﻿<ResourceDictionary xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls">
-    <Style TargetType="{x:Type Controls:WindowButtonCommands}" BasedOn="{StaticResource MahApps.Metro.Styles.WindowButtonCommands.Win10}" />
+    <Style TargetType="{x:Type Controls:WindowButtonCommands}" BasedOn="{StaticResource MahApps.Styles.WindowButtonCommands.Win10}" />
 </ResourceDictionary>
