--- a/Ui/Ui.Desktop/App.xaml
+++ b/Ui/Ui.Desktop/App.xaml
@@ -4,7 +4,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:UiLogic="clr-namespace:PhexensWuerfelraum.Logic.Ui;assembly=PhexensWuerfelraum.Logic.Ui"
+    xmlns:LogicUi="clr-namespace:PhexensWuerfelraum.Logic.Ui;assembly=PhexensWuerfelraum.Logic.Ui"
     xmlns:Desktop="clr-namespace:PhexensWuerfelraum.Ui.Desktop"
     StartupUri="MainWindow.xaml"
     d1p1:Ignorable="d">
@@ -12,14 +12,14 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary>
-                    <UiLogic:MainViewModel x:Key="Locator" d:IsDataSource="True" />
+                    <LogicUi:MainViewModel x:Key="Locator" d:IsDataSource="True" />
                     <Desktop:MessageListener x:Key="MessageListener" />
                 </ResourceDictionary>
 
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Light.Sienna.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.Page.xaml" />
+                <!--<ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.Page.xaml" />-->
 
                 <ResourceDictionary Source="/Resources/IconsNonShared.xaml" />
                 <ResourceDictionary Source="/Resources/Styles/MiscStyle.xaml" />
