--- a/Ui/Ui.Desktop/Dialogs/PickHeroDialog.xaml
+++ b/Ui/Ui.Desktop/Dialogs/PickHeroDialog.xaml
@@ -1,11 +1,11 @@
-﻿<simpleChildWindow:ChildWindow 
+﻿<simpleChildWindow:ChildWindow
     x:Class="PhexensWuerfelraum.Ui.Desktop.PickHeroDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:local="clr-namespace:PhexensWuerfelraum.Ui.Desktop"
-    mc:Ignorable="d" 
+    mc:Ignorable="d"
     xmlns:simpleChildWindow="clr-namespace:MahApps.Metro.SimpleChildWindow;assembly=MahApps.Metro.SimpleChildWindow"
     IsOpen="{Binding IsChildWindowOpenOrNotProperty}"
     Padding="15"
@@ -14,7 +14,7 @@
     Title="Helden-Software Helden"
     DataContext="{Binding Character, Source={StaticResource Locator}}">
     <simpleChildWindow:ChildWindow.OverlayBrush>
-        <SolidColorBrush Opacity="0.8" Color="{StaticResource Gray2}" />
+        <SolidColorBrush Opacity="0.8" Color="Gray" />
     </simpleChildWindow:ChildWindow.OverlayBrush>
 
     <Grid Width="400">
@@ -22,12 +22,12 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        
+
         <Label Grid.Row="0" FontWeight="Bold">Wähle einen Helden, indem du ihn anklickst:</Label>
-        <ListView 
-            x:Name="CharacterListView" 
-            ItemsSource="{Binding CharacterList}" 
-            SelectionChanged="ListView_SelectionChanged" 
+        <ListView
+            x:Name="CharacterListView"
+            ItemsSource="{Binding CharacterList}"
+            SelectionChanged="ListView_SelectionChanged"
             Grid.Row="1"
             HorizontalAlignment="Stretch"
             VerticalAlignment="Stretch"
@@ -36,8 +36,8 @@
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{Binding Name}" Margin="2"/>
-                        <TextBlock Text="{Binding LastUpdate}" Margin="2"/>
+                        <TextBlock Text="{Binding Name}" Margin="2" />
+                        <TextBlock Text="{Binding LastUpdate}" Margin="2" />
                     </StackPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
