--- a/Ui/Ui.Desktop/MainWindow.xaml
+++ b/Ui/Ui.Desktop/MainWindow.xaml
@@ -37,13 +37,21 @@
 
     <Controls:MetroWindow.RightWindowCommands>
         <Controls:WindowCommands ShowLastSeparator="False">
-            <Button DataContext="{Binding Character, Source={StaticResource Locator}}" Command="{Binding OpenHeroPickDialogCommand}" ToolTip="Helden wechseln">
-                <StackPanel Orientation="Horizontal">
-                    <Rectangle Width="5" />
-                    <iconPacks:PackIconMaterial Kind="AccountSwitch" Height="18" Width="15" />
-                    <Rectangle Width="5" />
-                </StackPanel>
-            </Button>
+            <Controls:SplitButton
+                x:Name="CharacterDropDownSelector"
+                Margin="0"
+                HorizontalContentAlignment="Center"
+                DataContext="{Binding Character, Source={StaticResource Locator}}"
+                ItemsSource="{Binding CharacterList}"
+                SelectedItem="{Binding SelectedCharacter, Mode=TwoWay}"
+                DisplayMemberPath="Name"
+                Text="Charakter wechseln"
+
+                SelectionChanged="CharacterDropDownSelector_SelectionChanged" Loaded="CharacterDropDownSelector_Loaded">
+                <Controls:SplitButton.Icon>
+                    <iconPacks:PackIconMaterial Margin="0" Kind="AccountSwitchOutline" />
+                </Controls:SplitButton.Icon>
+            </Controls:SplitButton>
 
             <Button
                 DataContext="{Binding ChatnRoll, Source={StaticResource Locator}}"
